# Epic-Claimer

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: README.md  ci_docker_fish.yaml  epic-claimer.yml  epic-gamer.yml
app/: deploy.py  models.py  notify.py  settings.py  utils.py
app/services/: epic_authorization_service.py  epic_games_service.py
docker/: .env.example  docker-compose.yaml  start.sh
scripts/: generate_commit_message.py
